test/sema/traits/trait_list_non_conforming_type_arg_trait.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
// CHECK: [[# @LINE + 1]]:19: error: cannot satisfy constraint 'T : B'
trait A<T <: Base<T>> {}

trait B {}

trait Base<T <: B> {}

fn main() {}
